src/render/snapshots/openclank__render__tool_view__tests__bash_tool_approval.snap
---
source: src/render/tool_view.rs
expression: output
---
┌ Tool Approval ───────────────────────────────────────────┐
│ Approve [bash] ls -la /tmp (y/n)                         │
└──────────────────────────────────────────────────────────┘
