src/render/snapshots/openclank__render__tool_view__tests__read_file_tool_approval.snap
---
source: src/render/tool_view.rs
expression: output
---
┌ Tool Approval ───────────────────────────────────────────┐
│ Approve [read_file] /etc/passwd (y/n)                    │
└──────────────────────────────────────────────────────────┘
